<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="409dp"
    android:layout_height="wrap_content"
    android:background="@drawable/reflection_back"

    android:backgroundTint="#61FFFFFF"
    android:backgroundTintMode="src_over"
    android:fillViewport="true"
    android:hapticFeedbackEnabled="false"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#bde0fe"

        android:fadeScrollbars="false"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/button4"
            android:layout_width="117dp"
            android:layout_height="117dp"
            android:layout_marginTop="284dp"
            android:layout_marginEnd="252dp"
            android:backgroundTint="#ffafcc"
            android:text="@string/foru"
            android:textColor="#000000"
            android:textSize="14sp"
            app:icon="@android:drawable/sym_action_chat"
            app:iconGravity="textTop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button2"
            app:strokeColor="#000000"
            app:strokeWidth="10px"
            tools:ignore="MissingConstraints,DuplicateSpeakableTextCheck" />


        <Button
            android:id="@+id/button3"
            android:layout_width="117dp"
            android:layout_height="117dp"
            android:layout_marginTop="196dp"
            android:layout_marginEnd="28dp"
            android:backgroundTint="#ffafcc"

            android:text="@string/sel"
            android:textColor="#000000"
            android:textSize="14sp"
            app:icon="@android:drawable/ic_menu_camera"
            app:iconGravity="textTop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button4"
            app:strokeColor="#000000"
            app:strokeWidth="10px"
            tools:ignore="MissingConstraints,DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/button2"
            android:layout_width="117dp"
            android:layout_height="117dp"
            android:layout_marginTop="132dp"
            android:backgroundTint="#ffafcc"
            android:text="@string/hear"
            android:textColor="#000000"
            app:icon="@android:drawable/stat_sys_headset"
            app:iconGravity="textTop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="#000000"
            app:strokeWidth="10px"
            tools:ignore="MissingConstraints,DuplicateSpeakableTextCheck"
            tools:strokeColor="#000000" />

        <Button
            android:id="@+id/button"
            android:layout_width="117dp"
            android:layout_height="117dp"
            android:layout_marginTop="277dp"
            android:backgroundTint="#ffafcc"
            android:text="@string/whe"
            android:textColor="#000000"
            app:icon="@android:drawable/ic_dialog_map"
            app:iconGravity="textTop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button3"
            app:strokeColor="#000000"
            app:strokeWidth="10px"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="140dp"
            android:layout_height="145dp"
            android:layout_marginTop="192dp"
            android:layout_marginBottom="64dp"
            app:layout_constraintBottom_toTopOf="@+id/button4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.409"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/button2"
            app:srcCompat="@drawable/step" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>
