<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:background="@drawable/reflection_back"
        android:backgroundTint="#61FFFFFF"
        android:backgroundTintMode="src_over"
        android:fillViewport="true"
        android:hapticFeedbackEnabled="false"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#bde0fe"
            android:fadeScrollbars="false"
            tools:context=".MainActivity">


            <EditText
                android:id="@+id/editTextTextPersonName2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="112dp"
                android:autofillHints=""
                android:background="#ffafcc"
                android:ems="10"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:autofillHints=""
                android:background="#ffafcc"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textAlignment="textEnd"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName2"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:autofillHints=""
                android:background="#ffafcc"
                android:textColor="@color/black"
                android:textAlignment="textEnd"
                android:ems="10"
                android:hint="@string/phone"
                android:textColorHint="@color/black"
                android:inputType="phone"
                android:minHeight="48dp"
                app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="34dp"
                android:background="@drawable/button_border"
                android:text="שליחה"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</RelativeLayout>
