<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:background="@drawable/reflection_back"
        android:backgroundTint="#61FFFFFF"
        android:backgroundTintMode="src_over"
        android:fillViewport="true"
        android:hapticFeedbackEnabled="false"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#bde0fe"
            android:fadeScrollbars="false"
            app:layout_constraintEnd_toStartOf="@+id/prof"
            app:layout_constraintStart_toStartOf="@+id/prof"
            tools:context=".MainActivity">


            <EditText
                android:id="@+id/editTextTextPersonName2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:background="#ffafcc"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/prof" />

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="2dp"
                android:autofillHints=""
                android:background="#ffafcc"
                android:ems="10"
                android:hint="@string/phone"
                android:inputType="phone"
                android:minHeight="48dp"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName2"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />


            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="33dp"
                android:background="@drawable/button_border"
                android:text="הוסף"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_url" />

            <Spinner
                android:id="@+id/prof"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:background="#ffafcc"
                android:contentDescription="@string/prof"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/img_url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="#ffafcc"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="כתובת תמונה"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                app:layout_constraintStart_toStartOf="@+id/editTextPhone"
                app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</RelativeLayout>
